Recreate Server (Apollo) w/Typescript, etc - update devDep sources

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "config-typescript"]
 	path = config-typescript
 	url = git@github.com:CityOfBoston/config-typescript.git
+	branch = main
