--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "@babel/cli": "^7.6.0",
     "@babel/core": "^7.6.0",
     "@babel/runtime": "^7.6.0",
-    "@cityofboston/config-babel": "^0.0.0",
+    "config-babel": "CityOfBoston/config-babel#apollo",
+    "config-typescript": "CityOfBoston/config-typescript#main",
     "@cityofboston/config-typescript": "^0.0.0",
     "@types/google.analytics": "^0.0.39",
     "@types/hapi": "^17.0.19",
